apps/petewall-net/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: petewall-net
  labels:
    istio-injection: enabled
