apps/petewall-net/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petewall-net
  namespace: petewall-net
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petewall-net
  template:
    metadata:
      labels:
        app: petewall-net
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        runAsGroup: 101
      containers:
        - name: nginx
          image: ghcr.io/petewall/petewall.net:2026.10.7-185535 # {"$imagepolicy": "flux-system:petewall-net"}
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              memory: 64Mi
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: nginx-cache
              mountPath: /var/cache/nginx
      volumes:
        - name: tmp
          emptyDir: {}
        - name: nginx-cache
          emptyDir: {}
