apps/petewall-net/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: petewall-net
  namespace: petewall-net
spec:
  type: ClusterIP
  selector:
    app: petewall-net
  ports:
    - name: http
      port: 80
      targetPort: http
