apps/petewall-net/virtual-service.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: petewall-net
  namespace: petewall-net
spec:
  hosts:
    - petewall.net
  gateways:
    - istio-system/petewall-net-gateway
  http:
    - route:
        - destination:
            host: petewall-net
            port:
              number: 80
